@@ -30,6 +30,7 @@ Bug fixes
 
  * Handle all exceptions from ``Image.get_file_size`` (Andrew Plummer)
  * Fix display of breadcrumbs in ModelAdmin (LB (Ben Johnston))
+ * Remove duplicate border radius of avatars (Benjamin Thurm)
 
 Upgrade considerations
 ======================
