@@ -17,6 +17,7 @@ Changelog
  * Increased max length of redirect URL field to 255 (Michael Harrison)
  * Fix: Handle all exceptions from `Image.get_file_size` (Andrew Plummer)
  * Fix: Fix display of breadcrumbs in ModelAdmin (LB (Ben Johnston))
+ * Fix: Remove duplicate border radius of avatars (Benjamin Thurm)
 
 
 2.1 (22.05.2018)
